# OOP_LABA

./: laba1.h
laba1/: CMakeLists.txt  laba1.cpp  main.cpp  test_laba1.cpp
laba2/: CMakeLists.txt  laba2.cpp  laba2.h  test_laba2.cpp
